--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apiverve/randomgenerator",
-  "version": "1.0.3",
+  "version": "1.1.4",
   "description": "Random Generator is a simple tool for generating random data. It returns random data such as numbers, strings, and more.",
   "main": "index.js",
   "scripts": {
@@ -18,15 +18,15 @@
   "bugs": {
     "url": "https://github.com/apiverve/randomgenerator-API/issues"
   },
-  "homepage": "https://github.com/apiverve/randomgenerator-API",
+  "homepage": "https://apiverve.com/marketplace/api/randomgenerator",
   "devDependencies": {
-    "mocha": "^10.4.0",
+    "mocha": "^10.7.3",
     "chai": "^5.1.1",
     "dotenv": "^16.4.5"
   },
   "dependencies": {
-    "node-fetch": "3.3.2",
+    "node-fetch": "^3.3.2",
     "promise": "^8.3.0",
-    "axios": "1.6.8"
+    "axios": "1.7.4"
   }
 }
